ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: prodigy
  annotations:
    kubernetes.io/ingress.class: addon-http-application-routing
spec:
  rules:
  - host:




    
    http:
      paths:
      - backend:
          serviceName: prodigy
          servicePort: 80
        path: /
